envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  clusters:
    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: akali_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: akali
                      port_value: 8080
      name: akali_cluster
      type: logical_dns
    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: questionai_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: questionai
                      port_value: 5000
      name: questionai_cluster
      type: logical_dns 
    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: thresh_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: thresh
                      port_value:  8080
      name: thresh_cluster
      type: logical_dns 
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                route_config:
                  name: local_route
                  virtual_hosts:
                    - cors:
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,x-language,x-custom-headers,connect-protocol-version
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_origin_string_match:
                          - prefix: "*"
                        expose_headers: grpc-status,grpc-message
                        max_age: "1728000"
                      domains:
                        - "*"
                      name: cms_service
                      routes:
                        - match:
                            prefix: /akali/
                          route:
                            cluster: akali_cluster
                            prefix_rewrite: /
                            timeout: 60s
                        - match:
                            prefix: /questionai/
                          route:
                            cluster: questionai_cluster
                            prefix_rewrite: /
                            timeout: 60s
                        - match:
                            prefix: /thresh/
                          route:
                            cluster: thresh_cluster
                            prefix_rewrite: /
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router 
                stat_prefix: ingress_http
      name: listener_0
